@@ -353,12 +353,8 @@ val_nsec_proves_name_error(struct ub_packed_rrset_key* nsec, uint8_t* qname)
 	return 0;
 }
 
-/**
- * Determine closest encloser of a query name and the NSEC that covers it
- * (and thus disproved it). 
- */
-static uint8_t* nsec_closest_encloser(uint8_t* qname, 
-	struct ub_packed_rrset_key* nsec)
+uint8_t* 
+nsec_closest_encloser(uint8_t* qname, struct ub_packed_rrset_key* nsec)
 {
 	uint8_t* next;
 	size_t nlen;
